--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,7 @@
 			<button type="submit" id="toggleAllBtn" class="selectAllStyle">Select All</button>
 			<input type="text" placeholder="Add New Task" />
 			<button type="submit" id="addItemBtn" class="AddItemStyle">Add New Item</button>
+			<button type="submit" id="displayItemBtn" class="displayItemStyle">Display Items</button>
 		</div>
 		<div class="itemList">
 		  <div class="itemEntry">
