--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,6 @@
 		<div id="newItem"><!-- top section of todo list w/ form and select all button and 'add' button. -->
       <div><input type="text" id="addInput" placeholder="Add New Task" /></div>
 			<button onclick="handlers.toggleAllHandler()" class="selectAllStyle">Select All</button>
-      <button onclick="handlers.displayItemsHandler()" class="displayItemStyle">Display Items</button>
       <button onclick="handlers.addItemHandler()" class="AddItemStyle">Add New Item </button>
 		</div>
 
@@ -22,7 +21,7 @@
         <input type="text" id="newInputValue" placeholder="Enter new item" />
       </div>
       <button onclick="handlers.changeItemHandler()" class="selectAllStyle">Change Item</button>
-      <button onclick="handlers.removeItemHandler()" class="selectAllStyle">Delete Item</button>
+      <!-- move this <button onclick="handlers.removeItemHandler()" class="selectAllStyle">Delete Item</button> -->
       <button onclick="handlers.toggleItemHandler()" class="selectAllStyle">Toggle Item</button>
     </div>
 
