--- a/index.htm
+++ b/index.htm
@@ -7,21 +7,20 @@
 </head>	
 <body>
 
-	<div class="container"> <!-- set overall shape of todo list. set min height with no max in css. -->
+	<div class="container"> 
 
-		<div id="newItem"><!-- top section of todo list w/ form and select all button and 'add' button. -->
+		<div id="newItem">
       <div><input type="text" id="addInput" placeholder="Add New Task" /></div>
 			<button onclick="handlers.toggleAllHandler()" class="selectAllStyle">Select All</button>
       <button onclick="handlers.addItemHandler()" class="AddItemStyle">Add New Item </button>
 		</div>
 
-    <div id="changeItem"><!-- top section of todo list w/ form and select all button and 'add' button. -->
+    <div id="changeItem">
       <div>
         <input type="text" id="indexValue" placeholder="Enter Index to change" />
         <input type="text" id="newInputValue" placeholder="Enter new item" />
       </div>
       <button onclick="handlers.changeItemHandler()" class="selectAllStyle">Change Item</button>
-      <!-- move this <button onclick="handlers.removeItemHandler()" class="selectAllStyle">Delete Item</button> -->
       <button onclick="handlers.toggleItemHandler()" class="selectAllStyle">Toggle Item</button>
     </div>
 
